# dynamic_array

./: CMakeLists.txt  conanfile.py
app/: main.cpp
lib/: CMakeLists.txt
lib/include/: dynamicArray.hpp
tests/: CMakeLists.txt  tests.cpp
